--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,10 +21,17 @@
     "eslint-plugin-promise": "^6.1.1",
     "nuxt": "^3.8.2",
     "pinia": "^2.1.7",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.8",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.4.4"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@mdi/font": "^7.3.67",
     "@vueuse/integrations": "^10.6.1",
     "universal-cookie": "^6.1.1"
   }
