--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
-DB_URI='mongodb+srv://maximebignolet:PSo1RudMfPlUSN5K@netflix-clone-db.zel1btg.mongodb.net/?retryWrites=true&w=majority'
+#DB_URI='mongodb+srv://maximebignolet:ReVhGUaNUlgVkFV8@netflix-clone-db.zel1btg.mongodb.net/?retryWrites=true&w=majority'
+
+DB_URI='mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.1.1'
