--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,8 @@
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.10.1",
     "@pinia/nuxt": "^0.5.1",
+    "@vueuse/core": "^10.7.0",
+    "@vueuse/nuxt": "^10.7.0",
     "eslint": "^8.55.0",
     "eslint-config-semistandard": "^17.0.0",
     "eslint-config-standard": "^17.1.0",
@@ -33,6 +35,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@mdi/font": "^7.3.67",
     "@vueuse/integrations": "^10.6.1",
+    "date-fns": "^2.30.0",
     "universal-cookie": "^6.1.1"
   }
 }
