--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,10 +29,17 @@
     "vuetify": "^3.4.4"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@fortawesome/fontawesome-svg-core": "6.4.0",
+    "@fortawesome/free-brands-svg-icons": "6.4.0",
+    "@fortawesome/free-regular-svg-icons": "6.4.0",
+    "@fortawesome/free-solid-svg-icons": "6.4.0",
+    "@fortawesome/pro-duotone-svg-icons": "6.4.0",
+    "@fortawesome/pro-light-svg-icons": "6.4.0",
+    "@fortawesome/pro-regular-svg-icons": "6.4.0",
+    "@fortawesome/pro-solid-svg-icons": "6.4.0",
+    "@fortawesome/pro-thin-svg-icons": "6.4.0",
+    "@fortawesome/sharp-solid-svg-icons": "6.4.0",
+    "@fortawesome/vue-fontawesome": "3.0.3",
     "@mdi/font": "^7.3.67",
     "@vueuse/integrations": "^10.6.1",
     "date-fns": "^2.30.0",
